test_files/netlist_footer_cmp/valid/valid_case_09_b.net
V1 IN 0 6
R1 IN OUT 2.2k
C1 OUT 0 470n
.param GAIN=10
; parameter comment ignored
.tran 0 5m
.backanno
.end
